--- a/assets/ignoreit/CR.html
+++ b/assets/ignoreit/CR.html
@@ -358,7 +358,7 @@ Jobaida Soma</div>
 Phone: <a class="telephone" href="tel:01781939371">01781939371</a></div>
 
 </div></div><div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Business Administration(BBA 10)</div></a>
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Business Administration(BA 10)</div></a>
 
 <div class="content">
 
