--- a/assets/ignoreit/department.html
+++ b/assets/ignoreit/department.html
@@ -329,7 +329,7 @@ website: <a href="www.nstupharma.org">www.nstupharma.org</a></div>
 
 <div class="infoclass"><strong>Dr. Newaz Mohammed Bahadur</strong><br />
 Phone: <a class="telephone" href="tel:71485">71485</a><br />
-Mobile: <a class="telephone" href="tel:01733066950">01733066950</a>, <a class="telephone" href="tel:01911110671">01911110671</a><br />
+Mobile: <a class="telephone" href="tel:01911110671">01911110671</a>, <a class="telephone" href="tel:01911110671">01911110671</a><br />
 Email: <a class="email" href="mailto:nmbahadur@yahoo.com">nmbahadur@yahoo.com</a></div>
 
 <p style="text-align: center;"><u><strong>Associate Professor</strong></u></p>
@@ -498,7 +498,7 @@ phone: <a class="telephone" href="tel:01840607032">01840607032</a> , <a class="t
 <p style="text-align: center;"><u><strong>Chairman &amp; Assistant professor</strong></u></p>
 
 <div class="infoclass"><strong>Afsana Mousume</strong><br />
-Phone: <a class="telephone" href="tel:01714402508">01714402508</a>, <a class="telephone" href="tel:01716269848">01716269848</a><br />
+Phone: <a class="telephone" href="tel:01716269848">01716269848</a><br />
 Email: <a class="email" href="mailto:afsana.mousume@gmail.com">afsana.mousume@gmail.com</a></div>
 
 <p style="text-align: center;"><u><strong>Assistant Professor</strong></u></p>
@@ -572,7 +572,7 @@ Phone: <a class="telephone" href="tel:01717955310">01717955310</a></div>
 </div>
 
 <div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander10" class="headertitle expander">Business Administration(BBA 10)</div></a>
+<a style="text-decoration:none" href="#"><div id="expander10" class="headertitle expander">Business Administration(BA 10)</div></a>
 
 <div class="content">
 <p style="text-align: center;"><u><strong>Chairman &amp; Assistant Professor</strong></u></p>
