--- a/assets/ignoreit/registraroffice.html
+++ b/assets/ignoreit/registraroffice.html
@@ -143,12 +143,21 @@ Mobile:<a class="telephone" href="tel:01814312632">01814312632</a></div>
 </div>
 
 <div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander4" class="headertitle expander">Establishment Branch:</div></a>
+<a style="text-decoration:none" href="#"><div id="expander4" class="headertitle expander">Establishment Branch</div></a>
 <div class="content">
 <div class="infoclass">Section Officer:<br />
 <strong>Mr. Md Abdur Rahman</strong><br />
 Mobile:<a class="telephone" href="tel:01716239906">01716239906</a>;<br />
 E-mail:<a class="email" href="mailto:ars_nstu@yahoo.com">ars_nstu@yahoo.com</a></div>
+</div>
+</div>
+
+<div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander4" class="headertitle expander">Research Cell</div></a>
+<div class="content">
+<div class="infoclass">Research Officer:<br />
+<strong>Golam Rabbani</strong><br />
+Mobile:<a class="telephone" href="tel:01712543729">01712543729</a>;<br />
 </div>
 </div>
 
