--- a/assets/ignoreit/department.html
+++ b/assets/ignoreit/department.html
@@ -329,7 +329,7 @@ website: <a href="www.nstupharma.org">www.nstupharma.org</a></div>
 
 <div class="infoclass"><strong>Dr. Newaz Mohammed Bahadur</strong><br />
 Phone: <a class="telephone" href="tel:71485">71485</a><br />
-Mobile: <a class="telephone" href="tel:01911110671">01911110671</a>, <a class="telephone" href="tel:01911110671">01911110671</a><br />
+Mobile: <a class="telephone" href="tel:01911110671">01911110671</a><br />
 Email: <a class="email" href="mailto:nmbahadur@yahoo.com">nmbahadur@yahoo.com</a></div>
 
 <p style="text-align: center;"><u><strong>Associate Professor</strong></u></p>
