--- a/assets/ignoreit/registraroffice.html
+++ b/assets/ignoreit/registraroffice.html
@@ -160,6 +160,7 @@ E-mail:<a class="email" href="mailto:ars_nstu@yahoo.com">ars_nstu@yahoo.com</a><
 Mobile:<a class="telephone" href="tel:01712543729">01712543729</a>;<br />
 </div>
 </div>
+</div>
 
 <div class="demo-frame">
 <a style="text-decoration:none" href="#"><div id="expander5" class="headertitle expander">Administration Branch</div></a>
@@ -200,7 +201,7 @@ Mobile:<a class="telephone" href="tel:01934384890">01934384890</a></div>
 </div>
 
 <div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander8" class="headertitle expander">Estate and Housing Branch:</div></a>
+<a style="text-decoration:none" href="#"><div id="expander8" class="headertitle expander">Estate and Housing Branch</div></a>
 <div class="content">
 <div class="infoclass">Assistant Registrar:<br />
 <strong>Mr. Mohammad saifuddin</strong><br />
