GridView UI, Database updated

--- a/assets/ignoreit/department.html
+++ b/assets/ignoreit/department.html
@@ -174,7 +174,7 @@ Mobile: <a class="telephone" href="tel:01727240180">01727240180</a><br />
 Email: <a class="email" href="mailto:mehedi_nstu@yahoo.com">mehedi_nstu@yahoo.com</a><br />
 website: <a href="www.fims-nstu.org">www.fims-nstu.org</a></div>
 
-<div class="infoclass"><strong>MOHAMMAD BELAL HOSSAIN</strong> (Study Leave)<br />
+<div class="infoclass"><strong>Dr. MOHAMMAD BELAL HOSSAIN</strong><br />
 Phone: <a class="telephone" href="tel:+6738665470">+6738665470</a>, <a class="telephone" href="tel:+8801711781550">+8801711781550</a><br />
 Email: <a class="email" href="mailto:belalhossain@yahoo.com">belalhossain@yahoo.com</a>, <a class="email" href="mailto:mbhnstu@gmail.com">mbhnstu@gmail.com</a><br />
 website: <a href="www.fims-nstu.org">www.fims-nstu.org</a></div>
