--- a/assets/ignoreit/message_developer.html
+++ b/assets/ignoreit/message_developer.html
@@ -185,7 +185,7 @@ MBG 9th<br />
 <a class="web" href="http://fb.com/nuruddin.shamim">www.fb.com/nuruddin.shamim</a></div>
 
 <div class="infoclass"><strong>Prottoy</strong><br />
-ACCE<br />
+Applied Math<br />
 9th Batch</div>
 
 <div class="infoclass"><strong>Ahmad</strong><br />
